.jjconflict-side-0/apps/mautrix/discord/overlays/nishir-tailnet/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-discord
spec:
  defaultBackend:
    service:
      name: mautrix-discord
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - matrix-discord
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-discord-media
  annotations:
    tailscale.com/funnel: "true"
    tailscale.com/tags: tag:web
spec:
  defaultBackend:
    service:
      name: synapse-proxy
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - matrix-discord-media
